--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "@uploadthing/react": "^7.1.0",
     "@vis.gl/react-google-maps": "^1.3.0",
     "ably": "^2.4.1",
     "add": "^2.0.6",
+    "asynckit": "^0.4.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "card": "^2.5.4",
@@ -64,6 +66,7 @@
     "react-day-picker": "^9.2.0",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
+    "react-dropzone": "^14.3.3",
     "react-hook-form": "^7.53.1",
     "react-hook-geolocation": "^1.1.0",
     "react-hot-toast": "^2.4.1",
@@ -76,6 +79,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.2.0",
     "ws": "^8.18.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
@@ -89,7 +93,7 @@
     "@nx/eslint-plugin": "20.0.3",
     "@nx/jest": "20.0.3",
     "@nx/js": "20.0.3",
-    "@nx/next": "20.0.3",
+    "@nx/next": "^20.0.7",
     "@nx/workspace": "20.0.3",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -124,7 +128,7 @@
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vercel": "^37.12.0"
