--- a/package.json
+++ b/package.json
@@ -57,8 +57,6 @@
     "framer-motion": "^11.11.10",
     "google-auth-library": "^9.14.2",
     "i": "^0.3.7",
- 
-    "json-web-token": "^3.2.0",
     "i18next": "^23.16.4",
     "input-otp": "^1.4.0",
     "jose": "^5.9.6",
@@ -127,7 +125,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/yargs": "^17.0.33",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -142,9 +140,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nx": "20.0.3",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.47",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.14",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.8.1",
