--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "mime": "^4.0.4",
     "mongodb": "^6.9.0",
     "nanoid": "^5.0.8",
-    "next": "^15.0.3",
+    "next": "14.2.3",
     "next-client-cookies": "^2.0.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
