--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@custom-react-hooks/use-geo-location": "^1.5.1",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^3.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
